alteração v2 pré acelera

--- a/MVVM/View/Auditoria.xaml
+++ b/MVVM/View/Auditoria.xaml
@@ -42,6 +42,8 @@
                   Height="370"
                   Background="{DynamicResource SidebarBackgroundBrush}"
                   IsReadOnly="True"
+                      Focusable="False"
+                      
                   CanUserAddRows="False"
                   CanUserDeleteRows="False"
                   CanUserReorderColumns="False"
