--- a/Theme/Dark.xaml
+++ b/Theme/Dark.xaml
@@ -228,7 +228,10 @@
                                       
                                       <ControlTemplate TargetType="ToggleButton">
                                           <Grid>
-                                          <Path Data="M0,0 L10,0 L5,6 Z"
+                                                <Border Background="Transparent"
+                                                Margin="10" Cursor="Hand"/>
+                                              
+                                                <Path Data="M0,0 L10,0 L5,6 Z"
                                           Fill="{DynamicResource ForegroundBrush}"
                                           Width="10"
                                           Height="6"
@@ -370,9 +373,6 @@
         <Setter Property="VerticalGridLinesBrush" Value="{DynamicResource ForegroundBrush}" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="Padding" Value="0,4,0,0"/>
-        
-        
-
     </Style>
 
     <!-- DataGrid ColumnHeader -->
@@ -411,30 +411,37 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-
+    
     <Style x:Key="IconButton" TargetType="Button">
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Padding" Value="0"/>
-        <Setter Property="Cursor" Value="Hand"/>
-        <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
+    <Setter Property="Background" Value="Transparent"/>
+    <Setter Property="BorderThickness" Value="0"/>
+    <Setter Property="Padding" Value="0"/>
+    <Setter Property="Cursor" Value="Hand"/>
 
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="Button">
-                    <ContentPresenter/>
-                    <ControlTemplate.Triggers>
+    <Setter Property="Template">
+        <Setter.Value>
+            <ControlTemplate TargetType="Button"> 
 
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Foreground" Value="{DynamicResource MainColorBrush}"/>
-                            <Setter Property="Cursor" Value="Hand"/>
-                        </Trigger>
+                <Grid>
 
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
+                    <Border Background="Transparent"
+                            Margin="8" Cursor="Hand"/>  
+                    
+                    <ContentPresenter
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"/>
+                </Grid>
+
+                <ControlTemplate.Triggers>
+                    <Trigger Property="IsMouseOver" Value="True">
+                        <Setter Property="Foreground" 
+                                Value="{DynamicResource MainColorBrush}"/>
+                    </Trigger>
+                </ControlTemplate.Triggers>
+            </ControlTemplate>
+        </Setter.Value>
+    </Setter>
+</Style>
 
 
 </ResourceDictionary>
