--- a/MVVM/View/Auditoria.xaml
+++ b/MVVM/View/Auditoria.xaml
@@ -8,6 +8,7 @@
         mc:Ignorable="d"
         Title="Auditoria" MinHeight="350" MinWidth="800" MaxHeight="480"
         FontFamily="{StaticResource Inter}"
+        WindowStartupLocation="CenterScreen"
         Icon="/digipat.ico"
         Background="{DynamicResource WindowBackgroundBrush}">
 
@@ -31,31 +32,33 @@
                 <Label Foreground="{DynamicResource ForegroundBrush}" FontSize="18" VerticalAlignment="Center" Content="Auditoria"></Label>
 
             </StackPanel>
-            
+            <Rectangle Fill="{DynamicResource ForegroundBrush}" Height="1" Margin="10"/>
+
             <Border Background="{DynamicResource WindowBackgroundBrush}" CornerRadius="12" Margin="10">
-            
-            <DataGrid ItemsSource="{Binding Registros}"
+
+                <DataGrid ItemsSource="{Binding Registros}"
                   Style="{DynamicResource DarkDataGrid}"
                   AutoGenerateColumns="False"
                   ColumnHeaderStyle="{StaticResource DarkDataGridHeader}"
                   RowStyle="{StaticResource DarkDataGridRow}"
                   Height="370"
+                  Padding="3"
                   Background="{DynamicResource SidebarBackgroundBrush}"
                   IsReadOnly="True"
-                      Focusable="False"
-                      
+                  Focusable="False" 
                   CanUserAddRows="False"
                   CanUserDeleteRows="False"
                   CanUserReorderColumns="False"
+                  VerticalScrollBarVisibility="Hidden"
                   CanUserResizeColumns="False"
-                  CanUserSortColumns="False">
-                
+                  CanUserSortColumns="True">
 
-                <DataGrid.Columns>
+
+                    <DataGrid.Columns>
                     <DataGridTextColumn Header="Usuário" Binding="{Binding Usuario}" Width="*"/>
                         <DataGridTextColumn Header="Ação" Binding="{Binding Acao}" Width="*"/>
                         <DataGridTextColumn Header="Item" Binding="{Binding Item}" Width="*"/>
-                        <DataGridTextColumn Header="Data" Binding="{Binding DataHora}" Width="*" />
+                        <DataGridTextColumn Header="Data" Binding="{Binding DataHora, StringFormat=dd/MM/yyyy HH:mm}" SortMemberPath="DataHora" Width="*" />
                 </DataGrid.Columns>
 
             </DataGrid>
