--- a/MVVM/View/EditorDocumentoView.xaml
+++ b/MVVM/View/EditorDocumentoView.xaml
@@ -24,10 +24,11 @@
           Height="15"
           Margin="10"/>
                 <Label Foreground="{DynamicResource ForegroundBrush}" FontSize="18" VerticalAlignment="Center" Content="Editor de Documento"></Label>
-
+                
             </StackPanel>
 
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Margin="0 0 0 0">
+            <Rectangle Fill="{DynamicResource ForegroundBrush}" Height="1" Margin="00 05 0 10"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Margin="0 10 0 0">
      
             <Button Content="&lt;" Command="{Binding AnteriorCommand}" Style="{StaticResource EditorButtonTheme}" Margin="2" Width="30"/>
             <Button Content="&gt;" Command="{Binding ProximaCommand}" Style="{StaticResource EditorButtonTheme}" Margin="2" Width="30"/>
@@ -49,9 +50,10 @@
                      Style="{DynamicResource TextBoxTheme}"
                      AcceptsReturn="True"
                      AcceptsTab="True"
-                        VerticalContentAlignment="Top"
-                     VerticalScrollBarVisibility="Auto"
-                     HorizontalScrollBarVisibility="Auto"
+                     VerticalContentAlignment="Top"
+                     VerticalScrollBarVisibility="Hidden"
+                     HorizontalScrollBarVisibility="Hidden"
+                     TextWrapping="Wrap"        
                      FontSize="14"
                      Margin="10"/>
 
