--- a/MVVM/View/SobreWindow.xaml
+++ b/MVVM/View/SobreWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         FontFamily="{StaticResource Inter}" 
         Title="Sobre" Height="450" Width="450"
-        Background="Transparent" WindowStyle="None" MouseDown="Window_MouseDown" AllowsTransparency="True" WindowStartupLocation="CenterScreen" >
+        Background="Transparent" WindowStyle="None" MouseDown="Window_MouseDown" AllowsTransparency="True" WindowStartupLocation="CenterScreen" Icon="/digipat.ico">
     
     <Grid Background="Transparent">
 
