--- a/MVVM/View/VIsualizadorDocumentoView.xaml
+++ b/MVVM/View/VIsualizadorDocumentoView.xaml
@@ -1,16 +1,18 @@
 <Window x:Class="patrimonio_digital.MVVM.View.VisualizadorDocumentoView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+         xmlns:local="clr-namespace:patrimonio_digital.MVVM.View"
+         xmlns:vm="clr-namespace:patrimonio_digital.MVVM.ViewModel"
         Title="Visualizador de Documento"
-        Height="Auto" Width="800"
+        Height="Auto" Width="500"
         Background="{DynamicResource WindowBackgroundBrush}"
         FontFamily="{StaticResource Inter}"
-        Icon="/digipat.ico">
+        Icon="/digipat.ico" WindowStartupLocation="CenterScreen">
 
     <Grid Margin="10">
         <StackPanel VerticalAlignment="Top">
 
-            <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left" Margin="10">
+            <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0">
                 <Path Data="M16.0607 3H5.25V21H18.75V5.68934L16.0607 3ZM6.75 19.5V4.5H15.4393L17.25 6.31066V19.5H6.75ZM8.25 9.75H15.75V8.25H8.25V9.75ZM8.25 12.75H15.75V11.25H8.25V12.75ZM12 15.75H8.25V14.25H12V15.75Z"
                         Fill="{DynamicResource ForegroundBrush}"
                         Stretch="Uniform"
@@ -26,7 +28,7 @@
                  Margin="10"/>
         
             </StackPanel>
-            
+            <Rectangle Fill="{DynamicResource ForegroundBrush}" Height="1" Margin="10"/>
 
             <TextBox Text="{Binding PaginaAtual.Conteudo}"
                      Style="{StaticResource TextBoxTheme}"
