--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -29,8 +29,6 @@
 		<DockPanel LastChildFill="True">
 
 			<!-- stackpanel usuário -->
-            
-            
 			<StackPanel DockPanel.Dock="Bottom" Margin="0" Orientation="Horizontal" Background="{DynamicResource LightSidebarBrush}">
                 <Path Data="M16.0603 18.307C14.89 19.0619 13.4962 19.5 12 19.5C10.5038 19.5 9.10996 19.0619 7.93972 18.307C8.66519 16.7938 10.2115 15.75 12 15.75C13.7886 15.75 15.3349 16.794 16.0603 18.307ZM17.2545 17.3516C16.2326 15.5027 14.2632 14.25 12 14.25C9.73663 14.25 7.76733 15.5029 6.74545 17.3516C5.3596 15.9907 4.5 14.0958 4.5 12C4.5 7.85786 7.85786 4.5 12 4.5C16.1421 4.5 19.5 7.85786 19.5 12C19.5 14.0958 18.6404 15.9908 17.2545 17.3516ZM21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12ZM12 12C13.2426 12 14.25 10.9926 14.25 9.75C14.25 8.50736 13.2426 7.5 12 7.5C10.7574 7.5 9.75 8.50736 9.75 9.75C9.75 10.9926 10.7574 12 12 12ZM12 13.5C14.0711 13.5 15.75 11.8211 15.75 9.75C15.75 7.67893 14.0711 6 12 6C9.92893 6 8.25 7.67893 8.25 9.75C8.25 11.8211 9.92893 13.5 12 13.5Z"
                       Fill="{DynamicResource ForegroundBrush}"
@@ -41,23 +39,39 @@
                 
                 <TextBlock Text="{Binding UsuarioLogado, StringFormat='Olá, {0}!'}" FontSize="15" Foreground="{DynamicResource ForegroundBrush}" Margin="0 6" FontWeight="Regular" HorizontalAlignment="Left" VerticalAlignment="Center" />
 
-                <DockPanel LastChildFill="True" Margin="50 0 0 0" Cursor="">
+                <DockPanel LastChildFill="True" Margin="20 0 0 0" Cursor="">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
 
+
+                        <Button
+                                 Style="{DynamicResource IconButton}"
+                                 BorderThickness="0"
+                                 Cursor="Hand"
+                                 Padding="0"
+                                 >
+
+                            <Path Data="M10.65 3L9.93163 3.53449L9.32754 5.54812L7.47651 4.55141L6.5906 4.68143L4.68141 6.59062L4.55139 7.47652L5.5481 9.32755L3.53449 9.93163L3 10.65V13.35L3.53449 14.0684L5.54811 14.6725L4.55142 16.5235L4.68144 17.4094L6.59063 19.3186L7.47653 19.4486L9.32754 18.4519L9.93163 20.4655L10.65 21H13.35L14.0684 20.4655L14.6725 18.4519L16.5235 19.4486L17.4094 19.3185L19.3186 17.4094L19.4486 16.5235L18.4519 14.6724L20.4655 14.0684L21 13.35V10.65L20.4655 9.93163L18.4519 9.32754L19.4486 7.47654L19.3186 6.59063L17.4094 4.68144L16.5235 4.55142L14.6725 5.54812L14.0684 3.53449L13.35 3H10.65ZM10.4692 6.96284L11.208 4.5H12.792L13.5308 6.96284L13.8753 7.0946C13.9654 7.12908 14.0543 7.16597 14.142 7.2052L14.4789 7.35598L16.7433 6.13668L17.8633 7.25671L16.644 9.52111L16.7948 9.85803C16.834 9.9457 16.8709 10.0346 16.9054 10.1247L17.0372 10.4692L19.5 11.208V12.792L17.0372 13.5308L16.9054 13.8753C16.8709 13.9654 16.834 14.0543 16.7948 14.1419L16.644 14.4789L17.8633 16.7433L16.7433 17.8633L14.4789 16.644L14.142 16.7948C14.0543 16.834 13.9654 16.8709 13.8753 16.9054L13.5308 17.0372L12.792 19.5H11.208L10.4692 17.0372L10.1247 16.9054C10.0346 16.8709 9.94569 16.834 9.85803 16.7948L9.52111 16.644L7.25671 17.8633L6.13668 16.7433L7.35597 14.4789L7.2052 14.142C7.16597 14.0543 7.12908 13.9654 7.0946 13.8753L6.96284 13.5308L4.5 12.792L4.5 11.208L6.96284 10.4692L7.0946 10.1247C7.12907 10.0346 7.16596 9.94571 7.20519 9.85805L7.35596 9.52113L6.13666 7.2567L7.25668 6.13667L9.5211 7.35598L9.85803 7.2052C9.9457 7.16597 10.0346 7.12908 10.1247 7.0946L10.4692 6.96284ZM14.25 12C14.25 13.2426 13.2426 14.25 12 14.25C10.7574 14.25 9.75 13.2426 9.75 12C9.75 10.7574 10.7574 9.75 12 9.75C13.2426 9.75 14.25 10.7574 14.25 12ZM15.75 12C15.75 14.0711 14.0711 15.75 12 15.75C9.92893 15.75 8.25 14.0711 8.25 12C8.25 9.92893 9.92893 8.25 12 8.25C14.0711 8.25 15.75 9.92893 15.75 12Z"
+                                 Fill="{DynamicResource ForegroundBrush}"
+                                 Stretch="Uniform"
+                                 Width="15"
+                                 Height="15"
+                                 Margin="10" />
+                        </Button>
+                        
                         <!--botão mudar tema-->
                          <Button
                                  Style="{DynamicResource IconButton}"
                                  BorderThickness="0"
                                  Cursor="Hand"
                                  Padding="0"
-                             Click="ToggleTheme_Click">
+                                 Click="ToggleTheme_Click">
                              
                             <Path Data="M12.75 3V6.04642C13.8456 6.18303 14.8494 6.61501 15.6793 7.26016L17.8337 5.10571L18.8944 6.16637L16.7399 8.32083C17.385 9.15071 17.817 10.1545 17.9536 11.25H21V12.75H17.9536C17.817 13.8455 17.385 14.8494 16.7399 15.6793L18.8943 17.8337L17.8336 18.8944L15.6792 16.7399C14.8493 17.385 13.8455 17.817 12.75 17.9536V21H11.25V17.9536C10.1545 17.817 9.1507 17.385 8.32081 16.7399L6.16653 18.8943L5.10585 17.8336L7.26014 15.6793C6.61501 14.8494 6.18303 13.8456 6.04642 12.75H3V11.25H6.04642C6.18303 10.1545 6.61498 9.15069 7.26008 8.3208L5.10574 6.16647L6.1664 5.10581L8.32073 7.26014C9.15063 6.61501 10.1545 6.18303 11.25 6.04642V3H12.75ZM8.85065 8.78571C9.66228 7.99038 10.7739 7.5 12 7.5C14.4853 7.5 16.5 9.51472 16.5 12C16.5 13.2592 15.9828 14.3975 15.1493 15.2143L8.85065 8.78571Z"
-                                Fill="{DynamicResource ForegroundBrush}"
-                                Stretch="Uniform"
-                                Width="15"
-                                Height="15"
-                                Margin="10"/>
+                                 Fill="{DynamicResource ForegroundBrush}"
+                                 Stretch="Uniform"
+                                 Width="15"
+                                 Height="15"
+                                 Margin="10"/>
                         </Button>
 
                         <!--botão logout-->
@@ -67,15 +81,16 @@
                             Cursor="Hand"
                             Padding="0"
                             Command="{Binding LogoutCommand}" >
-                           
+
                             <Path Data="M3.75 4.5H5.25V18.75H19.5V20.25H3.75V4.5ZM17.6515 8.25001L15.2196 5.81812L16.2803 4.75746L20.4851 8.96229L16.2803 13.1671L15.2196 12.1065L17.5761 9.75001L14.25 9.75C11.7647 9.75 9.75 11.7647 9.75 14.25V16.5H8.25V14.25C8.25 10.9363 10.9363 8.25 14.25 8.25L17.6515 8.25001Z"
                                Fill="{DynamicResource ForegroundBrush}"
                                Stretch="Uniform"
                                Width="15"
                                Height="15"
                                Margin="10" />
-
                         </Button>
+                        
+                        
                         
                     </StackPanel>
                 </DockPanel>
@@ -87,7 +102,7 @@
 			<Border Grid.Column="0" Background="{DynamicResource SidebarBackgroundBrush}">
 
 				<StackPanel DockPanel.Dock="Top">
-					<StackPanel Margin="0" Orientation="Vertical" Background="{DynamicResource WindowBackgroundBrush}">
+					<StackPanel Margin="0" Orientation="Vertical" Background="{DynamicResource LightSidebarBrush}">
 
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
 						<Path Data="M6.69 2a1.75 1.75 0 00-1.75 1.756L5 21.253a.75.75 0 001.219.583L12 17.21l5.782 4.625A.75.75 0 0019 21.25V3.75A1.75 1.75 0 0017.25 2H6.69z"
@@ -99,7 +114,7 @@
 						<TextBlock Text="digiPat" FontSize="38" Foreground="{DynamicResource ForegroundBrush}" Margin="10" FontWeight="Bold" HorizontalAlignment="Center" />
                         </StackPanel>
 
-                        <TextBlock Text="{Binding Instituicao}" FontSize="15" Foreground="{DynamicResource ForegroundBrush}" Margin="10" FontWeight="Regular" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                        <TextBlock Text="{Binding Instituicao}" FontSize="15" Foreground="{DynamicResource ForegroundBrush}" Margin="10" FontWeight="Light" VerticalAlignment="Center" HorizontalAlignment="Center" Cursor="Hand"/>
 
                     </StackPanel>
 
@@ -151,18 +166,21 @@
 						</StackPanel>
 
                         <StackPanel Orientation="Horizontal" Style="{DynamicResource StackPanelSidebar}"  Visibility="{Binding PodeAuditoria, Converter={StaticResource BoolToVisibilityConverter}}">
-                            <Path Data="M15 10.5C15 12.9853 12.9853 15 10.5 15C8.01472 15 6 12.9853 6 10.5C6 8.01472 8.01472 6 10.5 6C12.9853 6 15 8.01472 15 10.5ZM14.1793 15.2399C13.1632 16.0297 11.8865 16.5 10.5 16.5C7.18629 16.5 4.5 13.8137 4.5 10.5C4.5 7.18629 7.18629 4.5 10.5 4.5C13.8137 4.5 16.5 7.18629 16.5 10.5C16.5 11.8865 16.0297 13.1632 15.2399 14.1792L20.0304 18.9697L18.9697 20.0303L14.1793 15.2399Z"
+                            <Path Data="M12 15.9853L15.182 12.8033L14.1213 11.7427L12.75 13.114L12.75 5.25L11.25 5.25L11.25 13.114L9.8787 11.7427L8.81804 12.8033L12 15.9853ZM12 13.864L12 13.864L12.0001 13.864L12 13.864Z"
+                                  
                                   Fill="{DynamicResource ForegroundBrush}"
                                   Stretch="Uniform"
                                   Width="15"
                                   Height="15"
+                                  Opacity="0.50"
                                   Margin="10 0 0 0"/>
                             <RadioButton x:Name="btnExportarTudo"
 							 Command="{Binding AbrirJanelaCommand}"
-							 CommandParameter="Exportar"
+							 CommandParameter="Exportar Tudo"
 							 Content="Exportar"
 							 Height="50"
 							 FontSize="14"
+                             Opacity="0.50"
 							 Style="{DynamicResource MenuButtonTheme}"
 							 />
                         </StackPanel>
@@ -186,8 +204,8 @@
 
 		<!-- grid coluna 2 -->
 		<Grid Grid.Column="1" Margin="18">
-			<Grid.RowDefinitions>
-				<RowDefinition Height="Auto"/>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
 				<RowDefinition Height="*"/>
 			</Grid.RowDefinitions>
 
@@ -199,7 +217,7 @@
                          Text="{Binding TextoPesquisa, UpdateSourceTrigger=PropertyChanged}"
                          Style="{DynamicResource TextBoxTheme}"
                          Margin="0 0 0 10"
-                         Height="35"
+                         Height="40"
                          Width="Auto"
                          Tag="Digite para pesquisar..."/>
 				</StackPanel>
@@ -208,11 +226,13 @@
                            FontSize="12"
                            Foreground="{DynamicResource ForegroundBrush}"
                            FontWeight="Light"
+                           Opacity="0.35"
+                           Margin="0 10 0 10"
                            HorizontalAlignment="Right"
                            VerticalAlignment="Bottom"/>
 
 
-                <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Hidden">
+                <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Hidden" CanContentScroll="True" Height="750">
                     
 					<ItemsControl Margin="0 10 0 0" ItemsSource="{Binding ItensView}">
 						<ItemsControl.ItemTemplate>
@@ -282,12 +302,13 @@
                                                     Visibility="{Binding DataContext.PodeCatalogar, RelativeSource={RelativeSource AncestorType=ItemsControl}, Converter={StaticResource BoolToVisibilityConverter}}"
                                                     Style="{DynamicResource IconButton}"
                                                     Cursor="Hand">
-                                            
-                                                <Path Data="M8.56078 20.2501L20.5608 8.25011L15.7501 3.43945L3.75012 15.4395V20.2501H8.56078ZM15.7501 5.56077L18.4395 8.25011L16.5001 10.1895L13.8108 7.50013L15.7501 5.56077ZM12.7501 8.56079L15.4395 11.2501L7.93946 18.7501H5.25012L5.25012 16.0608L12.7501 8.56079Z"
+
+                                                <Path Data="M12 15.9853L15.182 12.8033L14.1213 11.7427L12.75 13.114L12.75 5.25L11.25 5.25L11.25 13.114L9.8787 11.7427L8.81804 12.8033L12 15.9853ZM12 13.864L12 13.864L12.0001 13.864L12 13.864Z"
                                                       Fill="{DynamicResource ForegroundBrush}"
                                                       Stretch="Uniform"
                                                       Width="15"
                                                       Height="15"
+                                                      Opacity="0.50"
                                                       Margin="10" />
                                             </Button>
 
