--- a/Theme/Dark.xaml
+++ b/Theme/Dark.xaml
@@ -17,6 +17,7 @@
         <Setter Property="BorderThickness" Value="0.6"/>
         <Setter Property="BorderBrush" Value="#f0fbfb"/>
         <Setter Property="Padding" Value="10"/>
+        <Setter Property="Background" Value="{DynamicResource LightSidebarBrush}"/>
     </Style>
 
     <!-- efeitos da sidebar via stackpanel -->
